--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
           env: SKIP_OEL=true
         - php: 5.6
         - php: 7.0
+        - php: 7.0
           env: DEPENDENCIES='dev'
         - php: 7.1
           env: DEPENDENCIES='low'
@@ -36,6 +37,7 @@ before_install:
 install:
     - export SYMFONY_PHPUNIT_REMOVE="symfony/yaml"
     - export SYMFONY_DEPRECATIONS_HELPER=strict
+    - if [ "$DEPENDENCIES" == "low" ]; then export SYMFONY_DEPRECATIONS_HELPER=disabled; fi;
     - if [ "$DEPENDENCIES" == "dev" ]; then composer config minimum-stability dev; fi;
     - if [ "$DEPENDENCIES" != "low" ]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi;
     - if [ "$DEPENDENCIES" == "low" ]; then composer update --prefer-dist --no-progress --no-suggest --ansi --prefer-lowest; fi;
