--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.5",
-        "symfony/framework-bundle": "^3.0"
+        "symfony/framework-bundle": "^2.8.9 || ^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,8 +26,11 @@
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^3.2",
-        "symfony/yaml": "^3.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^0.7.6"
+        "symfony/yaml": "^2.8.9 || ^3.0",
+        "symfony/property-access": "^2.8.9 || ^3.0",
+        "symfony/browser-kit": "^2.8.9 || ^3.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^0.7.6",
+        "matthiasnoback/symfony-service-definition-validator": "^1.2.6"
     },
     "extra": {
         "branch-alias": {
