--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,13 @@ language: php
 
 sudo: false
 
-branches:
-    only:
-        - master
-
 matrix:
     include:
-        # Use the newer stack for HHVM as HHVM does not support Precise anymore since a long time and so Precise has an outdated version
-        - php: hhvm-3.15
-          sudo: required
-          dist: trusty
-          group: edge
-        - php: 5.5
-          env: SKIP_OEL=true
         - php: 5.6
-        - php: 7.0
         - php: 7.0
           env: DEPENDENCIES='dev'
         - php: 7.1
-          env: DEPENDENCIES='low'
+          env: DEPENDENCIES='low' lint=1
     fast_finish: true
 
 cache:
@@ -28,19 +16,21 @@ cache:
         - $HOME/.composer/cache
 
 before_install:
-    # Matrix lines for OEL PHP versions are skipped for pull requests
-    - PHP=$TRAVIS_PHP_VERSION
-    - if [[ $SKIP_OEL && $TRAVIS_PULL_REQUEST != false ]]; then echo "Version ${PHP} is skipped for this pull request" && exit 0; fi
-    - if [[ ! $PHP = hhvm* ]]; then phpenv config-rm xdebug.ini || echo "xdebug not available"; fi
-    - composer selfupdate --stable
+    - phpenv config-rm xdebug.ini || echo "xdebug not available"
+    - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+    - if [[ $lint = 1 ]]; then wget https://github.com/FriendsOfPHP/PHP-CS-Fixer/releases/download/v2.3.2/php-cs-fixer.phar; fi
+    - if [[ $lint = 1 ]]; then composer global require --dev 'phpstan/phpstan:^0.8'; fi
+    - export PATH="$PATH:$HOME/.composer/vendor/bin"
 
 install:
-    - export SYMFONY_PHPUNIT_REMOVE="symfony/yaml"
-    - export SYMFONY_DEPRECATIONS_HELPER=strict
-    - if [ "$DEPENDENCIES" == "low" ]; then export SYMFONY_DEPRECATIONS_HELPER=disabled; fi;
     - if [ "$DEPENDENCIES" == "dev" ]; then composer config minimum-stability dev; fi;
     - if [ "$DEPENDENCIES" != "low" ]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi;
     - if [ "$DEPENDENCIES" == "low" ]; then composer update --prefer-dist --no-progress --no-suggest --ansi --prefer-lowest; fi;
 
 script:
+    - export SYMFONY_PHPUNIT_VERSION=5.7.19
+    - export SYMFONY_PHPUNIT_REMOVE="symfony/yaml"
+    - export SYMFONY_DEPRECATIONS_HELPER=strict
     - vendor/bin/simple-phpunit --verbose
+    - if [[ $lint = 1 ]]; then php php-cs-fixer.phar fix --dry-run --diff --no-ansi; fi
+    - if [[ $lint = 1 ]]; then phpstan analyse -c phpstan.neon -l5 --ansi src tests; fi
