--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "symfony/framework-bundle": "^2.8.9 || ^3.3.6"
+        "symfony/framework-bundle": "^2.8.9 || ^3.3.6 || ^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,10 +27,10 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^3.3.6",
-        "symfony/yaml": "^2.8.9 || ^3.3.6",
-        "symfony/property-access": "^2.8.9 || ^3.3.6",
-        "symfony/browser-kit": "^2.8.9 || ^3.3.6",
+        "symfony/phpunit-bridge": "^3.3.6 || ^4.0",
+        "symfony/yaml": "^2.8.9 || ^3.3.6 || ^4.0",
+        "symfony/property-access": "^2.8.9 || ^3.3.6 || ^4.0",
+        "symfony/browser-kit": "^2.8.9 || ^3.3.6 || ^4.0",
         "matthiasnoback/symfony-dependency-injection-test": "^1.1.0"
     },
     "extra": {
