--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ matrix:
     include:
         - php: 5.6
         - php: 7.0
-          env: DEPENDENCIES='dev'
+          env: deps='dev'
         - php: 7.1
-          env: DEPENDENCIES='low' lint=1
+          env: deps='low' lint=1
     fast_finish: true
 
 cache:
@@ -23,10 +23,9 @@ before_install:
     - export PATH="$PATH:$HOME/.composer/vendor/bin"
 
 install:
-    - if [ "$DEPENDENCIES" == "dev" ]; then composer config minimum-stability dev; fi;
-    - if [ "$DEPENDENCIES" != "low" ]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi;
-    - if [ "$DEPENDENCIES" == "low" ]; then composer update --prefer-dist --no-progress --no-suggest --ansi --prefer-lowest; fi;
-
+    - if [[ ! $deps ]]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi
+    - if [[ $deps = 'dev' ]]; then composer config minimum-stability dev && composer config prefer-stable false && composer update --prefer-dist --no-progress --no-suggest --ansi ; fi
+    - if [[ $deps = 'low' ]]; then composer update --prefer-dist --no-progress --no-suggest --prefer-stable --prefer-lowest --ansi; fi
     - |
         # Temp fix `matthiasnoback/symfony-dependency-injection-test` doesn't support Symfony 4 yet
         if [[ $DEPENDENCIES = 'dev' ]]; then
