--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,14 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^3.3.6 || ^4.0",
+        "symfony/phpunit-bridge": "^4.1",
         "symfony/yaml": "^2.8.9 || ^3.3.6 || ^4.0",
         "symfony/property-access": "^2.8.9 || ^3.3.6 || ^4.0",
         "symfony/browser-kit": "^2.8.9 || ^3.3.6 || ^4.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^1.1.0"
+        "matthiasnoback/symfony-dependency-injection-test": "^1.1.0 || ^2.3.1 || ^3.0.0",
+        "phpunit/phpunit": "^5.7.27 || ^6.5.8",
+        "symfony/expression-language": "^2.8.9 || ^3.3.6 || ^4.0",
+        "psr/container": "^1.0"
     },
     "extra": {
         "branch-alias": {
