--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,49 @@
 language: php
 
-sudo: false
+dist: xenial
+
+env:
+    global:
+        - SYMFONY_PHPUNIT_DISABLE_RESULT_CACHE=1
 
 matrix:
     include:
-        - php: 5.6
-        - php: 7.1
-          env: deps='dev'
-        - php: 7.1
-          env: deps='low'
-        - php: 7.1
-          env: lint=1
+        - php: 7.2
+          #env:
+          #  - SYMFONY_REQUIRE='^4.4'
+        - php: 7.3
+          env:
+            - lint=1
+            - QA_DOCKER_IMAGE=jakzal/phpqa:1.25.0-php7.3-alpine
+          services:
+              - docker
     fast_finish: true
+
+sudo: false
 
 cache:
     directories:
-        - $HOME/.composer/cache
+        - $HOME/.composer/cache/files
 
 before_install:
     - phpenv config-rm xdebug.ini || echo "xdebug not available"
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-    - if [[ $lint = 1 ]]; then wget https://github.com/FriendsOfPHP/PHP-CS-Fixer/releases/download/v2.3.2/php-cs-fixer.phar; fi
-    - if [[ $lint = 1 ]]; then composer global require --dev 'phpstan/phpstan:^0.8'; fi
+    - composer global require symfony/flex
+
+    - if [[ $lint = 1 ]]; then docker pull ${QA_DOCKER_IMAGE}; fi
     - export PATH="$PATH:$HOME/.composer/vendor/bin"
 
 install:
-    - if [[ ! $deps ]]; then composer update --prefer-dist --no-progress --no-suggest --ansi; fi
-    - if [[ $deps = 'dev' ]]; then composer config minimum-stability dev && composer config prefer-stable false && composer update --prefer-dist --no-progress --no-suggest --ansi ; fi
-    - if [[ $deps = 'low' ]]; then composer update --prefer-dist --no-progress --no-suggest --prefer-stable --prefer-lowest --ansi; fi
+    - composer install --prefer-dist --no-progress --no-suggest --ansi
 
 script:
+    - vendor/bin/phpunit --verbose
     - |
-        if [[ $deps = 'dev' ]]; then
-            export SYMFONY_DEPRECATIONS_HELPER=weak
-        else
-            export SYMFONY_DEPRECATIONS_HELPER=strict
+        if [[ $lint = 1 ]]
+        then
+            mkdir /tmp/tmp-phpqa-$(id -u)
+            export QA_DOCKER_COMMAND="docker run --init --interactive --tty --rm --user "$(id -u):$(id -g)" --volume /tmp/tmp-phpqa-$(id -u):/tmp --volume "$(pwd):/project" --workdir /project ${QA_DOCKER_IMAGE}"
+            sh -c "${QA_DOCKER_COMMAND} php-cs-fixer fix -vvv --diff --dry-run"
+            sh -c "${QA_DOCKER_COMMAND} phpstan analyse"
+            #sh -c "${QA_DOCKER_COMMAND} vendor/bin/psalm --show-info=false"
         fi
-    - if [[ ! $lint ]]; then vendor/bin/phpunit --verbose; fi
-    - if [[ $lint = 1 ]]; then php php-cs-fixer.phar fix --dry-run --diff --no-ansi; fi
-    - if [[ $lint = 1 ]]; then phpstan analyse -c phpstan.neon -l5 --ansi src tests; fi
