--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0",
-        "symfony/framework-bundle": "^2.8.9 || ^3.3.6 || ^4.0"
+        "php": "^7.2",
+        "symfony/framework-bundle": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,18 +27,17 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/yaml": "^2.8.9 || ^3.3.6 || ^4.0",
-        "symfony/property-access": "^2.8.9 || ^3.3.6 || ^4.0",
-        "symfony/browser-kit": "^2.8.9 || ^3.3.6 || ^4.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^1.1.0 || ^2.3.1 || ^3.0.0",
-        "phpunit/phpunit": "^5.7.27 || ^6.5.8",
-        "symfony/expression-language": "^2.8.9 || ^3.3.6 || ^4.0",
-        "psr/container": "^1.0"
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/yaml": "^5.0",
+        "symfony/property-access": "^5.0",
+        "symfony/browser-kit": "^5.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1.0",
+        "phpunit/phpunit": "^8.4.3",
+        "symfony/expression-language": "^5.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.2-dev"
         }
     }
 }
