--- a/tests/Functional/Application/AppBundle/Resources/config/routing/backend/products.yml
+++ b/tests/Functional/Application/AppBundle/Resources/config/routing/backend/products.yml
@@ -1,9 +1,9 @@
 backend_products_show:
     path: /show/{id}
-    defaults: { _controller: "AppBundle:Main:foo" }
+    defaults: { _controller: 'Rollerworks\Bundle\RouteAutowiringBundle\Tests\Functional\Application\AppBundle\Controller\MainController::fooAction' }
     requirements:
         id: '\d+'
 
 backend_products_list:
     path: /list
-    defaults: { _controller: "AppBundle:Main:foo" }
+    defaults: { _controller: 'Rollerworks\Bundle\RouteAutowiringBundle\Tests\Functional\Application\AppBundle\Controller\MainController::fooAction' }
