--- a/tests/Functional/Application/AppBundle/Resources/config/routing/frontend/cart.yml
+++ b/tests/Functional/Application/AppBundle/Resources/config/routing/frontend/cart.yml
@@ -1,7 +1,7 @@
 frontend_cart_show:
     path: /show
-    defaults: { _controller: "AppBundle:Main:foo" }
+    defaults: { _controller: 'Rollerworks\Bundle\RouteAutowiringBundle\Tests\Functional\Application\AppBundle\Controller\MainController::fooAction' }
 
 frontend_cart_clear:
     path: /clear
-    defaults: { _controller: "AppBundle:Main:foo" }
+    defaults: { _controller: 'Rollerworks\Bundle\RouteAutowiringBundle\Tests\Functional\Application\AppBundle\Controller\MainController::fooAction' }
