--- a/tests/Functional/Application/config/framework.yml
+++ b/tests/Functional/Application/config/framework.yml
@@ -2,12 +2,11 @@ framework:
     translator:          false
     secret:              test
     router:
-        resource: '%kernel.root_dir%/config/routing.yml'
+        resource: '%kernel.project_dir%/config/routing.yml'
         strict_requirements: '%kernel.debug%'
     form:                false
     csrf_protection:     false
     validation:          false
-    templating:          false
     default_locale:      en
     session:
         storage_id: session.storage.mock_file
